--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.9.0.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\gson-2.9.0.jar
+file.reference.mail.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\mail.jar
+file.reference.smtp.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\smtp.jar
 file.reference.sqljdbc42.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +47,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.gson-2.9.0.jar}
+    ${file.reference.gson-2.9.0.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
