--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ excludes=
 file.reference.gson-2.9.0.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\gson-2.9.0.jar
 file.reference.mail.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\mail.jar
 file.reference.smtp.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\smtp.jar
+file.reference.sqljdbc42.jar=D:\\jdbc6\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.9.0.jar}:\
     ${file.reference.smtp.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
